# BLAKE2

./: .gitignore  CMakeLists.txt  Config.cmake.in
neon/: blake2.h
sse/: blake2-config.h  blake2.h  blake2s.c
